# raspi

./: .gitignore  CMakeLists.txt  README.MD  UPDATE_LOG.MD  bugs.txt  config.h.in  multi_client_test.c  rain_client.c  rain_client.service  rain_server.c  rain_server.service  raind.c  test.c  test_server.c
inc/: arr.h  client_run.h  cmake_conf.h  conf.h  file.h  filed.h  global.h  head.h  linklist.h  load_clean.h  log.h  msg.h  msgd.h  mylink.h  myprocess.h  mysock.h  mysockd.h  myssl.h  mythread.h  raspi.h  raspi_drive.h  rsignal.h  rssl.h  run_client.h  run_server.h  self_sql.h  self_thread.h  socket_fd.h  sql_pool.h  ssl_pool.h  sundry.h  thread_pool.h  types.h  web_http.h
keys/: ca.crt  ca.key  client.crt  client.key  readme.txt  server.crt  server.key
server_source/: 1_send_msg.c
src/: arr.c  client_run.c  conf.c  file.c  filed.c  global.c  linklist.c  load_clean.c  log.c  msg.c  msgd.c  multi_client_test.c  mylink.c  myprocess.c  mysock.c  mysockd.c  myssl.c  mythread.c  rain_client.c  rain_server.c  raspi.c  raspi_drive.c  rsignal.c  rssl.c  run_client.c  run_server.c  self_sql.c  self_thread.c  socket_fd.c  sql_pool.c  ssl_pool.c  sundry.c  thread_pool.c  types.c  web_http.c
web/: page.html
